<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dashboard"
            android:icon="@drawable/ic_baseline_dashboard_24"
            android:title="@string/dashboard"/>
        <item
            android:id="@+id/favourites"
            android:icon="@drawable/ic_baseline_favorite_24"
            android:title="@string/favourites"/>
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_baseline_person_24"
            android:title="@string/profile"/>
        <item
            android:id="@+id/aboutApp"
            android:icon="@drawable/ic_baseline_help_outline_24"
            android:title="@string/about_app"/>
    </group>

</menu>