<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.DescriptionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="#15A8D5"
        app:layout_scrollFlags="scroll|enterAlways"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llContent"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:weightSum="6">

                <ImageView
                    android:id="@+id/imgBookImage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:src="@drawable/ic_launcher_foreground"
                    android:scaleType="centerCrop"
                    android:padding="5dp" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3.3">

                    <TextView
                        android:id="@+id/txtBookName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_book"
                        android:padding="8dp"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/txtBookAuthor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/name_of_the_author"
                        android:padding="8dp"
                        android:layout_below="@id/txtBookName"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"/>

                    <TextView
                        android:id="@+id/txtBookPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rs_299"
                        android:padding="8dp"
                        android:layout_below="@id/txtBookAuthor"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        android:textColor="#15A8D5"/>


                </RelativeLayout>

                <TextView
                    android:id="@+id/txtBookRating"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.2"
                    android:padding="4dp"
                    android:textSize="18sp"
                    android:text="@string/_4_5"
                    android:textStyle="bold"
                    android:textColor="#15A8D5"
                    android:drawablePadding="4dp"
                    app:drawableLeftCompat="@drawable/ic_baseline_star_24" />

            </LinearLayout>

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/llContent">

            <TextView
                android:id="@+id/txtAboutBookStatic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="6dp"
                android:textStyle="bold"
                android:textSize="16sp"
                android:text="@string/about_the_book"/>

            <TextView
                android:id="@+id/txtBookDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtAboutBookStatic"
                android:padding="6dp"
                android:textSize="18sp"
                android:text="@string/hello_blank_fragment"
                android:textColor="@color/black"
                android:layout_margin="10dp"/>


            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnAddToFav"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:text="@string/add_to_favourites"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="19sp"/>

    <RelativeLayout
        android:id="@+id/progressLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>