<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:id="@+id/bookItem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:paddingStart="0dp"
        android:paddingEnd="0dp">

        <ImageView
            android:id="@+id/imgRecyclerRowItem"
            android:layout_width="81dp"
            android:layout_height="90dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/txtRecyclerRowItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_toEndOf="@id/imgRecyclerRowItem"
            android:layout_toStartOf="@id/imgRatingRecyclerRowItem"
            android:text="@string/list_item"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/ratingRecyclerRowItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentEnd="true"
            android:text="@string/_4_5"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/imgRatingRecyclerRowItem"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginTop="5dp"
            android:layout_toStartOf="@id/ratingRecyclerRowItem"
            android:src="@drawable/ic_baseline_star_24" />

        <TextView
            android:id="@+id/authorRecyclerRowItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtRecyclerRowItem"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/imgRecyclerRowItem"
            android:text="@string/author_name" />

        <TextView
            android:id="@+id/priceRecyclerRowItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/authorRecyclerRowItem"
            android:layout_toEndOf="@id/imgRecyclerRowItem"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/rs_299"
            android:textColor="#29BEE3"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>